force-app/main/default/objects/Sequence_Detail__c/Sequence_Detail__c.object-meta.xml
<CustomObject>
    <label>Sequence Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>