force-app/main/default/objects/Sequence_Detail__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <referenceTo>Sequence__c</referenceTo>
    <relationshipLabel>Sequence Details</relationshipLabel>
    <relationshipName>Sequence_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>