force-app/main/default/objects/Sequence_Detail__c/fields/Sequence_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Stage__c</fullName>
    <label>Sequence Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payroll Rep</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
            <value>
                <fullName>401(k) Services</fullName>
            </value>
            <value>
                <fullName>Health &amp; Benefits</fullName>
            </value>
            <value>
                <fullName>HR Solutions</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>