force-app/main/default/objects/Sequence_Detail__c/fields/Week_End__c.field-meta.xml
<CustomField>
    <fullName>Week_End__c</fullName>
    <description>The week number after the Sequence Start Date this stage ends.</description>
    <inlineHelpText>The week number after the Sequence Start Date this stage ends.</inlineHelpText>
    <label>Week End</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>