force-app/main/default/objects/Sequence_Detail__c/fields/Week_Start__c.field-meta.xml
<CustomField>
    <fullName>Week_Start__c</fullName>
    <description>The week number after the Sequence Start Date this stage starts.</description>
    <inlineHelpText>The week number after the Sequence Start Date this stage starts.</inlineHelpText>
    <label>Week Start</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>